--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,11 +12,16 @@
   </div>
 </div>
 
+<form class="form-horizontal">
 <%= form_for(Message.new) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+  <div class="control-group">
+    <label class="control-label">名前:</label>
+    <div class="controls"><%= f.text_field :name %></div>
+  </div>
+  <div class="control-group">
+    <label class="control-label">内容:</label>
+    <div class="controls"><%= f.text_area :body %></div>
+    <div class="controls"><%= f.submit class: "btn btn-sm btn-primary " %></div>
+  </div>
 <% end %>
+</form>
