--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -17,5 +17,9 @@
 
   内容:
   <%= f.text_field :body %>
+  <br>
+  <br>
+  年齢：
+  <%= f.text_field :age %>
   <%= f.submit class: "btn btn-sm btn-primary" %>
 <% end %>
