--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,8 +12,21 @@
   </div>
 </div>
 
-<form class="form-horizontal">
 <%= form_for(Message.new) do |f| %>
+  <% if @message.errors.present? %>
+    <div class="alert alert-danger">
+      <%= alert %>
+      <ul>
+        <% @message.errors.full_messages.each do |full_message| %>
+          <li>
+            <%= full_message %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
+<form class="form-horizontal"> 
   <div class="control-group">
     <label class="control-label">名前:</label>
     <div class="controls"><%= f.text_field :name %></div>
